--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="images/photo.jpg"></td>
+            <td><img src="photo.jpg"></td>
         <td><h1>Vaibhav Patidar</h1> 
             <p><em>Founder of this <strong>website.</strong></em></p> 
          <p>My name is vaibhav patidar. I am learning Web Developmemnt from Udemy and I am making this website for fun</p></td>
