--- a/CONTACT.html
+++ b/CONTACT.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Contact me at</h1>
-    <p>My Email - patidavraibhav620@gmailcom</p>
+    <p>My Email - patidarvaibhav620@gmailcom</p>
     <hr>
     <form action="mailto:patidarvaibhav620@gmail.com" method="POST" enctype="text/plain">
         <label>Your Name</label>
