--- a/Hobbies.html
+++ b/Hobbies.html
@@ -11,6 +11,7 @@
         <li><a href="https://udemy.com">Learning Coding</a></li>
         <li><a href="https://www.youtube.com/channel/UCsGqHWcycPV_Do_Zpi7WMLw">Gaming</a></li>
         <li><a href="https://youtube.com/c/phenomicindian" class="tatti">Youtube Channel</a></li>
+        <li>Pant Mai potty</li>
     </ol> 
 </body>
 </html>
